--- a/.render.yaml
+++ b/.render.yaml
@@ -5,5 +5,5 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 8000
     envVars:
-      - key: GEMINI_API_KEY
+      - key: "AIzaSyAGO5xxrt5DrQi6dl9PhyzJ6zkaOv1BZtI"
         sync: false
